--- a/app/views/searches/_articles.html.erb
+++ b/app/views/searches/_articles.html.erb
@@ -1,17 +1,18 @@
-<section class="results-section articles <%= @articles.any? ? "is-active" : "" %>">
+<section class="results-section articles <%= @articles_search.show_articles? && @articles_search.has_items? ? "is-active" : "" %>">
   <div class="sidebar-item">
     <a class="file-type">
       <%= image_tag("icons/icon-articles", alt: "Articles", class: "filter-type-image") %>
     </a>
-    <p class="file-type-count"><%= @articles.size %></p>
+    <p class="file-type-count"><%= @articles_search.total_items %></p>
   </div>
   <h2 class="results-section-title">Documents</h2>
   <div class="card-grid">
-    <% @articles.each do |article| %>
+    <ul>
+      <% @articles.each do |article| %>
       <li class="card-container">
         <a class="card card--has-img" target=_blank href=<%= sufia.download_path(article) %>>
           <div class="card-figure-img">
-            <img src="<%= sufia.download_path(article, datastream_id: 'thumbnail') %>" alt="<%= article.title.first %>">
+            <img src="<%= sufia.download_path(article, file: 'thumbnail') %>" alt="<%= article.title.first %>">
           </div>
           <div class="card-content">
             <h3 class="card-content-title">
@@ -23,11 +24,12 @@
           </div>
         </a>
       </li>
+      <% end %>
+    </ul>
+  </div>
+  <div class="paging">
+    <% if @articles_search.show_more? %>
+    <a href="#" class="js-load-more-articles" data-page="<%= @articles_search.next_page %>">Load More</a>
     <% end %>
   </div>
-  <!-- <div class="paging">
-    if hasNextPage
-      a{action 'page' 'articles' 1} href="#"
-        | More
-  </div> -->
 </section>
