--- a/app/views/searches/_images.html.erb
+++ b/app/views/searches/_images.html.erb
@@ -1,9 +1,9 @@
-<section class="results-section images <%= @images_search.show_images? && @images_search.has_items? ? "is-active" : "" %>">
+<section class="results-section images <%= @images_search.show_images? && @images.has_items? ? "is-active" : "" %>">
   <div class="sidebar-item">
     <a class="file-type">
       <%= image_tag("icons/icon-images", alt: "Images", class: "filter-type-image") %>
     </a>
-    <p class="file-type-count"><%= @images_search.total_items %></p>
+    <p class="file-type-count"><%= @images.total_items %></p>
   </div>
   <h2 class="results-section-title">Images</h2>
 
@@ -11,7 +11,7 @@
     <section class="grid-wrap">
       <ul class="grid card-grid">
         <li class="grid-sizer" />
-        <% @images.each do |image| %>
+        <% @images.files.each do |image| %>
           <li class="card-container">
             <a class="card card--has-image card--overlay-content">
               <figure class="card__figure">
@@ -32,13 +32,13 @@
       </ul>
     </section>
     <div class="paging">
-      <% if @images_search.show_more? %>
-        <a href="#" class="js-load-more-images" data-page="<%= @images_search.next_page %>">Load More</a>
+      <% if @images.show_more? %>
+        <a href="#" class="js-load-more-images" data-page="<%= @images.next_page %>">Load More</a>
       <% end %>
     </div>
     <section class="slideshow">
       <ul>
-        <% @images.each do |image| %>
+        <% @images.files.each do |image| %>
           <li>
             <figure>
               <img class="slideshow-img" src="<%= sufia.download_path(image) %>" alt="<%= image.title.first %>" />
