--- a/app/views/searches/articles.html.erb
+++ b/app/views/searches/articles.html.erb
@@ -1,5 +1,5 @@
-<div data-page="<%= @articles_search.next_page %>" data-more="<%= @articles_search.show_more? %>">
-  <% @articles.each do |article| %>
+<div data-page="<%= @articles.next_page %>" data-more="<%= @articles.show_more? %>">
+  <% @articles.files.each do |article| %>
     <li class="card-container">
       <a class="card card--has-img" target=_blank href=<%= sufia.download_path(article) %>>
         <div class="card-figure-img">
