Allow multiple productions and venues
I believe I’ve caught everywhere that needs to be changed.  Everything
seems to be working properly.

--- a/app/views/searches/_videos.html.erb
+++ b/app/views/searches/_videos.html.erb
@@ -21,7 +21,7 @@
               <%= video.title.first %>
             </h3>
             <h4 class="card__content_subtitle">
-              <%= video.venue_name %>
+              <%= video.venue_names.join(", ") %>
             </h4>
             <p class="card__content__date">
               <%= video.date_created.first %>
