Only show/edit id fields, not name fields

--- a/app/views/records/show_fields/_production_ids.html.erb
+++ b/app/views/records/show_fields/_production_ids.html.erb
@@ -1,4 +1,4 @@
-<% record.production_names.each do |name| %>
-  <%= name %>
+<% ProductionCredits::Production.find(record.production_ids).each do |production| %>
+  <%= production.production_name %>
   <br />
 <% end %>
