--- a/app/views/records/show_fields/_venue_ids.html.erb
+++ b/app/views/records/show_fields/_venue_ids.html.erb
@@ -1,4 +1,4 @@
-<% record.venue_names.each do |name| %>
-  <%= name %>
+<% ProductionCredits::Venue.find(record.venue_ids).each do |venue| %>
+  <%= venue.name %>
   <br />
 <% end %>
