--- a/app/views/records/edit_fields/_production_ids.html.erb
+++ b/app/views/records/edit_fields/_production_ids.html.erb
@@ -1,3 +1,9 @@
-<%= f.input :production_ids, as: :select, collection: productions_for_select,
-      input_html: { class: 'form-control', multiple: true }
+<%= f.input :production_ids,
+      label: "Productions",
+      as: :select,
+      collection: productions_for_select,
+      input_html: {
+        class: 'form-control',
+        multiple: true
+      }
 %>
