--- a/app/views/records/edit_fields/_venue_ids.html.erb
+++ b/app/views/records/edit_fields/_venue_ids.html.erb
@@ -1,3 +1,9 @@
-<%= f.input :venue_ids, as: :select, collection: venues_for_select,
-     input_html: { class: 'form-control', multiple: true }
+<%= f.input :venue_ids,
+      label: "Venues",
+      as: :select,
+      collection: venues_for_select,
+      input_html: {
+        class: 'form-control',
+        multiple: true
+      }
 %>
