Add EmptySearchResults object and refactor to use

--- a/app/views/searches/_articles.html.erb
+++ b/app/views/searches/_articles.html.erb
@@ -1,4 +1,4 @@
-<section class="results-section articles <%= @articles_search.show_articles? && @articles.has_items? ? "is-active" : "" %>">
+<section class="results-section articles <%= @articles.has_items? ? "is-active" : "" %>">
   <div class="sidebar-item">
     <a class="file-type">
       <%= image_tag("icons/icon-articles", alt: "Articles", class: "filter-type-image") %>
