--- a/app/views/searches/_audios.html.erb
+++ b/app/views/searches/_audios.html.erb
@@ -1,4 +1,4 @@
-<section class="results-section audios <%= @audios_search.show_audios? && @audios.has_items? ? "is-active" : "" %>">
+<section class="results-section audios <%= @audios.has_items? ? "is-active" : "" %>">
   <div class="sidebar-item">
     <a class="file-type">
       <%= image_tag("icons/icon-audios", alt: "Audios", class: "filter-type-image") %>
