--- a/app/views/searches/_filters.html.erb
+++ b/app/views/searches/_filters.html.erb
@@ -46,7 +46,7 @@
                         "data-img-src" => image_path("icons/icon-#{type}.png")
                       }
                     ]
-                    }, @search.resource_types),
+                    }, @search.types),
                     class: "js-type-list",
                     multiple: "multiple" %>
           </div>
