--- a/app/views/searches/_images.html.erb
+++ b/app/views/searches/_images.html.erb
@@ -1,4 +1,4 @@
-<section class="results-section images <%= @images_search.show_images? && @images.has_items? ? "is-active" : "" %>">
+<section class="results-section images <%= @images.has_items? ? "is-active" : "" %>">
   <div class="sidebar-item">
     <a class="file-type">
       <%= image_tag("icons/icon-images", alt: "Images", class: "filter-type-image") %>
