--- a/app/views/searches/_videos.html.erb
+++ b/app/views/searches/_videos.html.erb
@@ -1,4 +1,4 @@
-<section class="results-section videos <%= @videos_search.show_videos? && @videos.has_items? ? "is-active" : "" %>">
+<section class="results-section videos <%= @videos.has_items? ? "is-active" : "" %>">
   <div class="sidebar-item">
     <a class="file-type">
       <%= image_tag("icons/icon-videos", alt: "Videos", class: "filter-type-image") %>
