--- a/app/views/static/terms.html.erb
+++ b/app/views/static/terms.html.erb
@@ -136,8 +136,8 @@ respect the intellectual property rights of others. If you believe your
 copyright has been violated on the Site, please notify us through <%=
 t('sufia.institution_name') %>'s designated agent under the Digital Millennium
 Copyright Act (see 17 U.S.C. Â&sect;512(c)(3).</li> <li> B. Other Site Issues:
-Please direct all other communications to <a href="/contact/">contact
-form</a>.</ul> </ul> </p>
+Please direct all other communications to <a href="<%= sufia.contact_path %>">
+contact form</a>.</ul> </ul> </p>
 
 <p> 13. <strong>Applicable Law and Jurisdiction; Access from Outside the
 Commonwealth of Pennsylvania:</strong> The Site is controlled and operated from
