--- a/app/views/searches/_footer.html.erb
+++ b/app/views/searches/_footer.html.erb
@@ -1,4 +1,4 @@
 <ul>
-  <li><%= link_to "About", public_about_path %></li>
+  <li><%= link_to "About", about_path %></li>
   <li><%= link_to "Terms of Use", policies_path %></li>
 </ul>
