Clean up show views
Add raw delegators for the name attributes to the
GenericFilesPresenter.  This allows us to use those in the view
templates rather than having to go look up the production credits
records to access the names from there.

--- a/app/views/records/show_fields/_venue_ids.html.erb
+++ b/app/views/records/show_fields/_venue_ids.html.erb
@@ -1,4 +1,4 @@
-<% ProductionCredits::Venue.find(record.venue_ids).each do |venue| %>
-  <%= venue.name %>
+<% record.venue_names.each do |name| %>
+  <%= name %>
   <br />
 <% end %>
