--- a/app/views/records/show_fields/_production_ids.html.erb
+++ b/app/views/records/show_fields/_production_ids.html.erb
@@ -1,4 +1,4 @@
-<% ProductionCredits::Production.find(record.production_ids).each do |production| %>
-  <%= production.production_name %>
+<% record.production_names.each do |name| %>
+  <%= name %>
   <br />
 <% end %>
