Minor formatting tweaks
Address the Hound comments that we can actually address.  We can’t
change id and class selectors, since those are in Sufia code.

--- a/app/assets/stylesheets/overrides/sufia.css.scss
+++ b/app/assets/stylesheets/overrides/sufia.css.scss
@@ -1,5 +1,5 @@
 #home_header {
-  background: image_url('home_bg.jpg') center 100% no-repeat;
+  background: image_url("home_bg.jpg") center 100% no-repeat;
   background-size: cover;
 }
 
@@ -8,8 +8,8 @@
 }
 
 .home_share_work {
-  padding: 0;
   background-color: transparent;
+  padding: 0;
 
   p {
     background-color: transparent;
