--- a/app/views/searches/videos.html.erb
+++ b/app/views/searches/videos.html.erb
@@ -1,25 +1,33 @@
 <div data-page="<%= @videos.next_page %>" data-more="<%= @videos.show_more? %>">
-<% @videos.files.each do |video| %>
-  <li class="js-video-container card-container">
-    <a class="js-video card card--has-img card--overlay-content" data-webm=<%= sufia.download_path(video, datastream_id: 'webm') %> data-mp4=<%= sufia.download_path(video, datastream_id: 'mp4') %> data-title=<%= video.title.first %>
-       data-description=<%= video.description %> data-description=<%= video.venue_name %>>
-       <div class="card-figure-img">
-          <div class="card-figure-img-wrapper">
-            <img src="<%= sufia.download_path(video, file: 'thumbnail') %>" alt="<%= video.title.first %>" />
+  <div id="videos">
+    <% @videos.files.each do |video| %>
+      <li class="js-video-container card-container">
+        <a class="js-video card card--has-img card--overlay-content" data-webm=<%= sufia.download_path(video, datastream_id: 'webm') %> data-mp4=<%= sufia.download_path(video, datastream_id: 'mp4') %> data-title=<%= video.title.first %>
+           data-description=<%= video.description %> data-description=<%= video.venue_name %>>
+           <div class="card-figure-img">
+              <div class="card-figure-img-wrapper">
+                <img src="<%= sufia.download_path(video, file: 'thumbnail') %>" alt="<%= video.title.first %>" />
+              </div>
+            </div>
+          <div class="card__content">
+            <h3 class="card__content__title">
+              <%= video.title.first %>
+            </h3>
+            <h4 class="card__content_subtitle">
+              <%= video.venue_name %>
+            </h4>
+            <p class="card__content__date">
+              <%= video.date_created.first %>
+            </p>
           </div>
-        </div>
-      <div class="card__content">
-        <h3 class="card__content__title">
-          <%= video.title.first %>
-        </h3>
-        <h4 class="card__content_subtitle">
-          <%= video.venue_name %>
-        </h4>
-        <p class="card__content__date">
-          <%= video.date_created.first %>
-        </p>
-      </div>
-    </a>
-  </li>
-<% end %>
+        </a>
+      </li>
+    <% end %>
+  </div>
+
+  <div class="paging">
+    <% if @videos.show_more? %>
+    <a href="#" class="js-load-more-videos" data-page="<%= @videos.next_page %>">Load More</a>
+    <% end %>
+  </div>
 </div>
