--- a/app/views/searches/articles.html.erb
+++ b/app/views/searches/articles.html.erb
@@ -1,19 +1,27 @@
 <div data-page="<%= @articles.next_page %>" data-more="<%= @articles.show_more? %>">
-  <% @articles.files.each do |article| %>
-    <li class="card-container">
-      <a class="card card--has-img" target=_blank href=<%= sufia.download_path(article) %>>
-        <div class="card-figure-img">
-          <img src="<%= sufia.download_path(article, file: 'thumbnail') %>" alt="<%= article.title.first %>">
-        </div>
-        <div class="card-content">
-          <h3 class="card-content-title">
-            <%= article.title.first %>
-          </h3>
-          <h4 class="card-content-subtitle">
-            <%= article.production_name %>
-          </h4>
-        </div>
-      </a>
-    </li>
-  <% end %>
+  <div id="articles">
+    <% @articles.files.each do |article| %>
+      <li class="card-container">
+        <a class="card card--has-img" target=_blank href=<%= sufia.download_path(article) %>>
+          <div class="card-figure-img">
+            <img src="<%= sufia.download_path(article, file: 'thumbnail') %>" alt="<%= article.title.first %>">
+          </div>
+          <div class="card-content">
+            <h3 class="card-content-title">
+              <%= article.title.first %>
+            </h3>
+            <h4 class="card-content-subtitle">
+              <%= article.production_name %>
+            </h4>
+          </div>
+        </a>
+      </li>
+    <% end %>
+  </div>
+
+  <div class="paging">
+    <% if @articles.show_more? %>
+    <a href="#" class="js-load-more-articles" data-page="<%= @articles.next_page %>">Load More</a>
+    <% end %>
+  </div>
 </div>
