change views to plural production and venue names

--- a/app/views/searches/articles.html.erb
+++ b/app/views/searches/articles.html.erb
@@ -11,7 +11,7 @@
               <%= article.title.first %>
             </h3>
             <h4 class="card-content-subtitle">
-              <%= article.production_name %>
+              <%= article.production_names %>
             </h4>
           </div>
         </a>
