--- a/app/views/searches/images.html.erb
+++ b/app/views/searches/images.html.erb
@@ -26,8 +26,8 @@
       <img class="slideshow-img" src="<%= sufia.download_path(image) %>" alt="<%= image.title.first %>" />
       <figcaption>
         <h3><%= image.title.first %></h3>
-        <p><%= image.production_name %></p>
-        <p><%= image.venue_name %></p>
+        <p><%= image.production_names.join(',') %></p>
+        <p><%= image.venue_names.join(',') %></p>
         <p><%= image.description.first %></p>
         <p><%= image.date_created.first %></p>
       </figcaption>
