--- a/app/views/generic_files/_permission_form.html.erb
+++ b/app/views/generic_files/_permission_form.html.erb
@@ -1,9 +1,11 @@
 <% depositor = f.object.depositor || batch.generic_files.first.depositor %>
-<% public_perm = f.object.permissions.map { |perm| perm.access if perm.agent_name == "public"}.compact.first %>
-<% public_perm = true if params[:controller] == 'batch' %>
-<% registered_perm = f.object.permissions.map { |perm| perm.access if perm.agent_name == "registered"}.compact.first %>
+<% is_batch = params[:controller] == "batch" %>
+<% public_perm = f.object.public? || is_batch %>
+<% discoverable_perm = !public_perm && f.object.discoverable? %>
+<% registered_perm = !public_perm && !discoverable_perm && f.object.registered? %>
+<% private_perm = !public_perm && !discoverable_perm && !registered_perm %>
 
-<h2><% if params[:controller] == 'batch' %>Bulk <% end %>Permissions <% if params[:controller] == 'batch' %>
+<h2><% if is_batch %>Bulk <% end %>Permissions <% if is_batch %>
       <small>(applied to all files just uploaded)</small><% end %>
 </h2>
 
@@ -22,13 +24,16 @@
   </h3>
   <div class="radio">
     <label>
-      <input type="radio" id="visibility_open" name="visibility" value="<%=Hydra::AccessControls::AccessRight::VISIBILITY_TEXT_VALUE_PUBLIC %>" <% if !public_perm.blank? %> checked="true"<% end %>/> <span class="label label-success">Open Access</span> Visible to the world.
+      <input type="radio" id="visibility_open" name="visibility" value="<%= Hydra::AccessControls::AccessRight::VISIBILITY_TEXT_VALUE_PUBLIC %>" <% if public_perm %> checked="true"<% end %>/> <span class="label label-success">Open Access</span> Visible to the world.
     </label>
     <label>
-      <input type="radio" id="visibility_psu" name="visibility" value="<%=Hydra::AccessControls::AccessRight::VISIBILITY_TEXT_VALUE_AUTHENTICATED %>" <% if !registered_perm.blank? %> checked="true"<% end %> /><span class="label label-info"><%=t('sufia.institution_name') %></span> Visible to all <%=t('sufia.institution_name') %> users.
+      <input type="radio" id="visibility_discoverable" name="visibility" value="discoverable" <% if discoverable_perm %> checked="true"<% end %>/> <span class="label label-warning">Discoverable</span> Only metadata visible.
     </label>
     <label>
-      <input type="radio" id="visibility_restricted" name="visibility" value="<%=Hydra::AccessControls::AccessRight::VISIBILITY_TEXT_VALUE_PRIVATE %>"<% if registered_perm.blank? and public_perm.blank?%> checked="true"<% end %> /> <span class="label label-danger">Private</span> Visible to you only.
+      <input type="radio" id="visibility_psu" name="visibility" value="<%= Hydra::AccessControls::AccessRight::VISIBILITY_TEXT_VALUE_AUTHENTICATED %>" <% if registered_perm %> checked="true"<% end %> /><span class="label label-info"><%=t('sufia.institution_name') %></span> Visible to all <%=t('sufia.institution_name') %> users.
+    </label>
+    <label>
+      <input type="radio" id="visibility_restricted" name="visibility" value="<%= Hydra::AccessControls::AccessRight::VISIBILITY_TEXT_VALUE_PRIVATE %>"<% if private_perm %> checked="true"<% end %> /> <span class="label label-danger">Private</span> Visible to you only.
     </label>
   </div>
 </div><!-- /.well -->
