Use helpers for asset paths

--- a/app/assets/stylesheets/overrides/sufia.css.scss
+++ b/app/assets/stylesheets/overrides/sufia.css.scss
@@ -1,5 +1,5 @@
 #home_header {
-  background: image_url("home_bg.jpg") center 100% no-repeat;
+  background: image-url("home_bg.jpg") center 100% no-repeat;
   background-size: cover;
 }
 
