--- a/app/views/searches/_header.html.erb
+++ b/app/views/searches/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="header-primary" style="background-image: url('assets/header-bg-richard.jpg');">
   <div class="header-logo">
-    <img src="assets/osf-logo.png" alt="Oregon Shakespeare Festival" />
+    <%= image_tag("osf-logo.png", alt: "Oregon Shakespeare Festival") %>
   </div>
   <nav class="nav-primary">
     <a class="nav-primary__link" href="#">Connect With Us</a>
