--- a/app/views/searches/_articles.html.erb
+++ b/app/views/searches/_articles.html.erb
@@ -1,7 +1,7 @@
 <section class="results-section articles <%= @articles.has_items? ? "is-active" : "" %>">
   <div class="sidebar-item">
     <a class="file-type">
-      <%= image_tag("icons/icon-articles", alt: "Articles", class: "filter-type-image") %>
+      <%= image_tag("icon-articles", alt: "Articles", class: "filter-type-image") %>
     </a>
     <p class="file-type-count"><%= @articles.total_items %></p>
   </div>
