--- a/app/views/searches/_audios.html.erb
+++ b/app/views/searches/_audios.html.erb
@@ -1,7 +1,7 @@
 <section class="results-section audios <%= @audios.has_items? ? "is-active" : "" %>">
   <div class="sidebar-item">
     <a class="file-type">
-      <%= image_tag("icons/icon-audios", alt: "Audios", class: "filter-type-image") %>
+      <%= image_tag("icon-audios", alt: "Audios", class: "filter-type-image") %>
     </a>
     <p class="file-type-count"><%= @audios.total_items %></p>
   </div>
