--- a/app/assets/stylesheets/base/_fonts.scss
+++ b/app/assets/stylesheets/base/_fonts.scss
@@ -1,7 +1,7 @@
-@import url(http://fonts.googleapis.com/css?family=Rosario:400,700,400italic,700italic);
-@import url(http://fonts.googleapis.com/css?family=PT+Serif:400,700);
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900);
+@import url(https://fonts.googleapis.com/css?family=Rosario:400,700,400italic,700italic);
+@import url(https://fonts.googleapis.com/css?family=PT+Serif:400,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900);
 
 @font-face {
   font-family: "bpicons";
