fix header image path

--- a/app/views/searches/_header.html.erb
+++ b/app/views/searches/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="header-primary" style="background-image: url('assets/header-bg-richard.jpg');">
+<header class="header-primary" style="background-image: url(<%= image_path('header-bg-richard.jpg') %>);">
   <div class="header-logo">
     <%= image_tag("osf-logo.png", alt: "Oregon Shakespeare Festival") %>
   </div>
