--- a/app/views/searches/_images.html.erb
+++ b/app/views/searches/_images.html.erb
@@ -1,7 +1,7 @@
 <section class="results-section images <%= @images.has_items? ? "is-active" : "" %>">
   <div class="sidebar-item">
     <a class="file-type">
-      <img src="<%= image_path('icon-images') %>" alt="Images" class="filter-type-image" />
+      <img src="<%= image_path("icons/icon-images.png") %>" alt="Images" class="filter-type-image" />
     </a>
     <p class="file-type-count"><%= @images.total_items %></p>
   </div>
