add links to main website

--- a/app/views/searches/_header.html.erb
+++ b/app/views/searches/_header.html.erb
@@ -3,10 +3,10 @@
     <%= image_tag("osf-logo.png", alt: "Oregon Shakespeare Festival") %>
   </div>
   <nav class="nav-primary">
-    <a class="nav-primary__link" href="#">Connect With Us</a>
-    <a class="nav-primary__link" href="#">Plan Your Visit</a>
-    <a class="nav-primary__link" href="#">Give and Join</a>
-    <a class="nav-primary__link btn-primary" href="#">Buy Tickets</a>
+    <a class="nav-primary__link" href="https://www.osfashland.org/en/connect-with-us/explore-our-stories.aspx">Connect With Us</a>
+    <a class="nav-primary__link" href="https://www.osfashland.org/plan-your-visit/visitor-info.aspx">Plan Your Visit</a>
+    <a class="nav-primary__link" href="https://www.osfashland.org/give-and-join/individuals.aspx">Give and Join</a>
+    <a class="nav-primary__link btn-primary" href="https://www.osfashland.org/experience-osf/current-season/buy-tickets.aspx">Buy Tickets</a>
   </nav>
   <h1 class="page-title">Welcome to the Archive</h1>
   <div class="search-the-archive">
