--- a/app/views/batch/_metadata.html.erb
+++ b/app/views/batch/_metadata.html.erb
@@ -28,7 +28,7 @@
       <div class="col-sm-6">
       <h3>Applies to all files just uploaded</h3>
       <%= f.input :resource_type, as: :select_with_help, collection: Sufia.config.resource_types,
-          input_html: { class: 'form-control' } %>
+          input_html: { class: 'form-control', name: "generic_file[resource_type][]" } %>
 
       <%= f.input :tag, as: :multi_value_with_help %>
 
