--- a/app/views/records/edit_fields/_resource_type.html.erb
+++ b/app/views/records/edit_fields/_resource_type.html.erb
@@ -1,2 +1,2 @@
 <%= f.input :resource_type, as: :select_with_help, collection: Sufia.config.resource_types,
-    input_html: { class: 'form-control' } %>
+    input_html: { class: 'form-control', name: "generic_file[resource_type][]" } %>
