--- a/app/views/searches/videos.html.erb
+++ b/app/views/searches/videos.html.erb
@@ -17,7 +17,7 @@
               <%= video.venue_names %>
             </h4>
             <p class="card__content__date">
-              <%= video.date_created.first %>
+              <%= video.date_created.first.to_date.to_s(:long) %>
             </p>
           </div>
         </a>
