Use %m/%d/%Y format for dates instead
We need our own date format defined, which is in an initializer.

--- a/app/views/searches/_videos.html.erb
+++ b/app/views/searches/_videos.html.erb
@@ -24,7 +24,7 @@
               <%= video.venue_names.join(", ") %>
             </h4>
             <p class="card__content__date">
-              <%= video.date_created.first.to_date.to_s(:long) %>
+              <%= video.date_created.first.to_date.to_s(:mdy) %>
             </p>
           </div>
         </a>
