--- a/app/views/searches/images.html.erb
+++ b/app/views/searches/images.html.erb
@@ -11,7 +11,7 @@
           <%= image.title.first %>
         </h1>
         <p class="card__content__date">
-          <%= image.date_created.first.to_date.to_s(:mdy) %>
+          <%= formatted_creation_date(image) %>
         </p>
       </div>
     </a>
@@ -29,7 +29,7 @@
         <p><%= image.production_names.join(',') %></p>
         <p><%= image.venue_names.join(',') %></p>
         <p><%= image.description.first %></p>
-        <p><%= image.date_created.first.to_date.to_s(:mdy) %></p>
+        <p><%= formatted_creation_date(image) %></p>
       </figcaption>
     </figure>
   </li>
