--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -1,7 +1,5 @@
 input {
-  border-style: solid;
-  border-width: 1px;
-  border-color: rgb(227, 227, 227);
+  border: 1px solid rgb(227, 227, 227);
   border-radius: 3px;
   box-shadow: none;
   background-color: rgb(255, 255, 255);
