--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,4 +1,5 @@
 %btn {
+  border-radius: 3px;
   color: $white;
   display: inline-block;
   cursor: pointer;
@@ -11,35 +12,18 @@
   transition: all .3s;
 }
 
-.btn-group {
-  padding: 0;
-
-  * {
-    list-style: none;
-    float: left;
-  }
-
-  :first-child a {
-    border-radius: 1px 0 0 1px;
-  }
-
-  :last-child a {
-    border-radius: 0 1px 1px 0;
-  }
-}
-
 .btn-primary {
   @extend %btn;
-  background-color: $accent-primary;
+  background-color: $cta-primary;
   background-image: -webkit-linear-gradient( 90deg, rgba(0,0,0,0.25098) 0%, rgba(255,255,255, .4) 100%);
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.19);
 
   &:hover {
-    background-color: darken($accent-primary, 5%);
+    background-color: darken($cta-primary, 5%);
   }
 
   &:active {
-    background-color: darken($accent-primary, 10%);
+    background-color: darken($cta-primary, 10%);
   }
 }
 
