--- a/app/views/searches/_footer.html.erb
+++ b/app/views/searches/_footer.html.erb
@@ -1,4 +1,6 @@
-<ul>
-  <li><%= link_to "About", about_path %></li>
-  <li><%= link_to "Terms of Use", policies_path %></li>
-</ul>
+<footer class="page-footer">
+  <ul>
+    <li><%= link_to "About", about_path %></li>
+    <li><%= link_to "Terms of Use", policies_path %></li>
+  </ul>
+</footer>
