--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -66,7 +66,7 @@ $(function(){
 
 function initLoadMoreArticles() {
   $('.js-load-more-articles').click(function() {
-    refreshURL = window.location.search.substring(1).concat('&types%5B%5D=articles')
+    refreshURL = window.location.search.substring(1)
     var page = $(this).data("page");
     fetchArticles(page);
   })
@@ -74,7 +74,7 @@ function initLoadMoreArticles() {
 
 function initLoadMoreVideos() {
   $('.js-load-more-videos').click(function() {
-    refreshURL = window.location.search.substring(1).concat('&types%5B%5D=videos')
+    refreshURL = window.location.search.substring(1)
     var page = $(this).data("page");
     fetchVideos(page);
   })
@@ -82,7 +82,7 @@ function initLoadMoreVideos() {
 
 function initLoadMoreAudios() {
   $('.js-load-more-audios').click(function() {
-    refreshURL = window.location.search.substring(1).concat('&types%5B%5D=audios')
+    refreshURL = window.location.search.substring(1)
     var page = $(this).data("page");
     fetchAudios(page);
   })
@@ -90,7 +90,7 @@ function initLoadMoreAudios() {
 
 function initLoadMoreImages() {
   $('.js-load-more-images').click(function() {
-    refreshURL = window.location.search.substring(1).concat('&types%5B%5D=images')
+    refreshURL = window.location.search.substring(1)
     var page = $(this).data("page")
     fetchImages(page);
   })
