--- a/app/views/_controls.html.erb
+++ b/app/views/_controls.html.erb
@@ -3,21 +3,11 @@
     <div class="col-xs-12 col-sm-5 col-md-6">
       <nav class="navbar navbar-default" role="navigation">
         <ul class="nav navbar-nav">
-          <li <%= 'class=active' if current_page?(sufia.root_path) %>>
-            <a href="<%= sufia.root_path %>">Home</a>
-          </li>
-          <li <%= 'class=active' if current_page?(sufia.about_path) %>>
-            <a href="<%= sufia.about_path %>">About</a>
-          </li>
-          <li <%= 'class=active' if current_page?(admin_policies_path) %>>
-            <a href="<%= admin_policies_path %>">Policies</a>
-          </li>
-          <li <%= 'class=active' if action_name == "help" %>>
-            <a href="<%= sufia.static_path(:help) %>">Help</a>
-          </li>
-          <li <%= 'class=active' if current_page?(sufia.contact_path) %>>
-            <a href="<%= sufia.contact_form_index_path %>">Contact</a>
-          </li>
+            <li <%= 'class=active' if current_page?(sufia.root_path) %>><a href="<%= sufia.root_path %>">Home</a></li>
+            <li <%= 'class=active' if current_page?(sufia.about_path) %>><a href="<%= sufia.about_path %>">About</a></li>
+            <li <%= 'class=active' if current_page?(admin_policies_path) %>><a href="<%= admin_policies_path %>">Policies</a></li>
+            <li <%= 'class=active' if action_name == "help" %>><a href="<%= sufia.static_path('help') %>">Help</a></li>
+            <li <%= 'class=active' if current_page?(sufia.contact_path) %>><a href="<%= sufia.contact_path %>">Contact</a></li>
         </ul><!-- /.nav -->
       </nav><!-- /.navbar -->
     </div>
